# TipTiltFLI

./: .gitignore  Biquad.cpp  Biquad.h  Butterworth.cpp  Butterworth.h  CMakeLists.txt  CalibrationMatrix.csv  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  XVoltageOnly.csv  YVoltageOnly.csv  calibration.cpp  common.h  controls.h  detector.h  firstlight.h  generate_dark_flat.cpp  imageheaders.h  imageprocess.h  main.cpp  make_calibration_matrix.cpp  mkl_data_types.h  mkltest.cpp  motorcontrols.cpp  motorcontrols.h  pid.cpp  pid.h  serialconnection.cpp  serialconnection.h  test.cpp  test_2.cpp  tiptiltlive.py  utilheaders.h  utils.cpp  voltage_test.cpp
